# LARC-2023

./: .gitignore  deteccion_de_colores.py  getline.py  larc_tasks_2409  lector_letras.py  ros.gitignore
Vision/: auto_calibration.py  calibracion_colores.py  capture_app_test.py  dataset_gen.py  deteccion_arucos.py  deteccion_de_colores.py  detect_cubos.py  lector_letras.py  lector_multi_letras.py  let.ipynb  letras_tf.ipynb  line_detector.py  model.ipynb  model.py  model.tflite  model2.ipynb  splitTrainValidation.ipynb  tempCodeRunnerFile.py  yolov8_test.py
Vision/arucos_model/: Arucos2dmodel.ipynb  arucos.ipynb
Vision/letters_model/: letras_tf.ipynb  model2.ipynb  primero.tflite
catkin_larc/.catkin_tools/profiles/default/: devel_collisions.txt
catkin_larc/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
catkin_larc/devel/lib/pkgconfig/: robot_description.pc  simulation.pc
catkin_larc/logs/main_engine/: build.cmake.000.log.stderr
catkin_larc/logs/orb_slam2_ros/: build.make.001.log.stderr
catkin_larc/logs/pc_downsample/: build.cmake.001.log.stderr
catkin_larc/src/imu_bno055/: CMakeLists.txt
catkin_larc/src/imu_bno055/launch/: imu.launch
catkin_larc/src/imu_bno055/src/: bno055_i2c_activity.cpp  bno055_i2c_node.cpp
catkin_larc/src/main_engine/: CMakeLists.txt  package.xml
catkin_larc/src/main_engine/launch/: larc_main.launch
catkin_larc/src/main_engine/msg/: lineSensor.msg
catkin_larc/src/main_engine/scripts/: 6cubes_right.py  colorAlign.py  color_cubes.py  mainEngine.py  placeInShelf.py  qbo.py  serialController.py
catkin_larc/src/main_engine/src/: main_engine.cpp
catkin_larc/src/main_engine/srv/: MechanismCommand.srv
catkin_larc/src/nav/: CMakeLists.txt  package.xml
catkin_larc/src/nav/action/: Drive2Target.action
catkin_larc/src/nav/msg/: tile.msg
catkin_larc/src/nav/scripts/: follow_cube.py  nav_main.py
catkin_larc/src/navigation/nav_main/: CMakeLists.txt  (+1 more)
catkin_larc/src/navigation/robot_description/: CMakeLists.txt  package.xml
catkin_larc/src/navigation/robot_description/launch/: nexus.launch
catkin_larc/src/navigation/robot_description/urdf/: nexus_4wd_mecanum.gazebo.xacro  nexus_4wd_mecanum.xacro
catkin_larc/src/robot_description_larc/: CMakeLists.txt
catkin_larc/src/simulation/: CMakeLists.txt
catkin_larc/src/vision/: CMakeLists.txt  package.xml  typescript
controller/: Drive.ino
controller_tests/drive_test/: drive_test.ino
controller_tests/motor_test/: motor_test.ino
main_controller/: BNO.cpp  BNO.h  Constants.h  Drive.cpp  Drive.h  Elevator.cpp  Elevator.h  Intake.cpp  Intake.h  Kinematics.cpp  Kinematics.h  LineSensor.cpp  LineSensor.h  Motor.cpp  Motor.h  PID.cpp  PID.h  PeriodicIO.h  RosBridge.cpp  RosBridge.h  SensorsSetup.ino  VLX.cpp  VLX.h  Warehouse.cpp  Warehouse.h  main_controller.ino  plot.py  teleop.py
main_controller/drive_test/: drive_test.ino
main_controller/lineTest/: Constants.h  LineSensor.h  lineTest.ino
main_controller/motor_test/: motor_test.ino
main_controller/sensor_test/: sensor_test.ino
main_controller/tests/: RosBridge.cpp  RosBridge.h  teleop.py
main_controller/tests/BNO_Teleop/: BNO.h  BNO_Teleop.ino  Constants.h  Drive.cpp  Drive.h  PID.cpp  PID.h  SensorsSetup.ino  VLX.cpp  VLX.h
main_controller/tests/BNO_test/: BNO.cpp  BNO_test.ino
main_controller/tests/PID_test/: Constants.h  Drive.cpp  Drive.h  Motor.cpp  PID.cpp  PID.h  PID_test.ino  Plot.cpp  Plot.h
main_controller/tests/drive_test/: drive_test.ino
main_controller/tests/micro_test/: micro_test.ino
main_controller/tests/motor_test/: motor_test.ino
main_controller/tests/nema/: SensorsSetup.ino  nema.ino
main_controller/tests/random_test/: random_test.ino
main_controller/tests/sensor_test/: sensor_test.ino
main_controller/tests/tof_test/: tof_test.ino
(+76 files in other folders)
